--- a/src/WRA.Umbraco.Web/wwwroot/css/src/components/_loaders.scss
+++ b/src/WRA.Umbraco.Web/wwwroot/css/src/components/_loaders.scss
@@ -10,6 +10,10 @@
     align-items: center;
     justify-content: center;
     //background: rgba(0,0,0,0.1);
+
+    &--small {
+        transform: scale(0.5);
+    }
 }
 
 //credit: https://loading.io/css/
