--- a/src/WRA.Umbraco.Web/Views/Magazine.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Magazine.cshtml
@@ -69,7 +69,7 @@
                     <a href="/news-updates/" class="btn btn-primary btn-sm d-none d-lg-block">See All</a>
                 </div>
                 <div class="row">
-                    <div class="@(moreArticles.Any() ? "col-lg-7" : "col-lg-12") pe-lg-4">
+                    <div class="@(moreArticles != null ? "col-lg-7" : "col-lg-12") pe-lg-4">
                         <h3 class="h4 text-white px-3 py-2" style="background-color: var(--bs-blue-dark)">
                             Featured Articles
                         </h3>
@@ -112,24 +112,25 @@
                         }
 
                     </div>
-                  
-                    @if (moreArticles.Any())
+                    @if (moreArticles != null)
                     {
-                        <div class="col-lg-5 ps-lg-1 ms-lg-auto">
-                            <div class="ps-lg-4 border-medium border-start no-border-mobile h-100">
-                                <h3 class="h4 text-white px-3 py-2" style="background-color: var(--bs-blue-dark)">
-                                    More News
-                                </h3>
-                                <ul class="list-unstyled gap-2 d-flex flex-column pt-2">
-                                    @foreach (var link in moreArticles)
-                                    {
-                                        <li><a href="@link.Url" class="fw-bold fs-sm" style="color: inherit" target="@link.Target">@link.Name</a></li>
-                                    }
-                                </ul>
+                        @if (moreArticles.Any())
+                        {
+                            <div class="col-lg-5 ps-lg-1 ms-lg-auto">
+                                <div class="ps-lg-4 border-medium border-start no-border-mobile h-100">
+                                    <h3 class="h4 text-white px-3 py-2" style="background-color: var(--bs-blue-dark)">
+                                        More News
+                                    </h3>
+                                    <ul class="list-unstyled gap-2 d-flex flex-column pt-2">
+                                        @foreach (var link in moreArticles)
+                                        {
+                                            <li><a href="@link.Url" class="fw-bold fs-sm" style="color: inherit" target="@link.Target">@link.Name</a></li>
+                                        }
+                                    </ul>
+                                </div>
                             </div>
-                        </div>
+                        }
                     }
-                    
                 </div>
                 <a href="/news-updates/" class="btn btn-primary btn-sm d-lg-none w-100 mt-4">See All</a>
             </div>
