Deployment ced8b45f-3d10-4be6-8bf7-3906f1ab7ac0: Run number 562

--- a/src/WRA.Umbraco.Web/Views/MagazineLanding.cshtml
+++ b/src/WRA.Umbraco.Web/Views/MagazineLanding.cshtml
@@ -45,7 +45,7 @@
 
                         <img src="@imageCurrent.Url()?width=640" class="img-fluid fit-cover mb-4" width="320" height="412" alt="@(imageCurrent.Value("altText") ?? "")" />
                     }
-                    <a href="@content.Value("Pdf")" class="btn btn-primary">Download PDF</a>
+                    <a href="@content.Value("Pdf")"  target="_blank" class="btn btn-primary">Download PDF</a>
                 </div>
                 <div class="col-lg-8">
                     <div class="d-flex flex-row align-items-center justify-content-center justify-content-md-between mb-3">
