--- a/src/WRA.Umbraco.Web/Views/Magazine.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Magazine.cshtml
@@ -61,7 +61,7 @@
         <div class="row">
             <div class="col-lg-4 d-flex flex-column align-items-center pb-6 pb-lg-0">
                 <img src="@imageCurrent.Url()?width=640" class="img-fluid fit-cover mb-4" width="320" height="412" alt="@(imageCurrent.Value("altText") ?? "")" />
-                <a href="@content.Pdf" class="btn btn-primary">Download PDF</a>
+                <a href="@content.Pdf" target="_blank" class="btn btn-primary">Download PDF</a>
             </div>
             <div class="col-lg-8">
                 <div class="d-flex flex-row align-items-center justify-content-center justify-content-md-between mb-3">
