--- a/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/educationSection.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/educationSection.cshtml
@@ -66,7 +66,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 position-relative block-home-education-section__img-col mt-0">
-                    <img src="@image.MediaUrl()" alt="@image.Value("altText")" class="block-home-education-section__img img-curved img-curved--large" />
+                    <img src="@image.GetCropUrl(width: 500, height: 500, furtherOptions:"&format=WebP")" srcset="@image.GetCropUrl(width: 1000, height: 1000, furtherOptions:"&format=WebP") 2x" width="500" height="500" alt="@image.Value("altText")" class="block-home-education-section__img img-curved img-curved--large" />
                 </div>
             </div>
         </div>
