--- a/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/featureBreaker.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/featureBreaker.cshtml
@@ -15,7 +15,7 @@
         if (typedMediaPickerSingle != null)
 
         {
-            <img src="@typedMediaPickerSingle.MediaUrl()" class="block-feature-breaker__img" loading="lazy" />
+            <img src="@typedMediaPickerSingle.GetCropUrl(width: 1280, furtherOptions:"&format=WebP")" srcset="@typedMediaPickerSingle.GetCropUrl(width: 2560, furtherOptions:"&format=WebP") 2x" class="block-feature-breaker__img" loading="lazy" />
         }
 
         else
