--- a/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/interiorHero.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/interiorHero.cshtml
@@ -9,8 +9,9 @@
     var imageDesktop = content.Value<Umbraco.Cms.Core.Models.MediaWithCrops>("imageDesktop");
     var imageMobile = content.Value<Umbraco.Cms.Core.Models.MediaWithCrops>("imageMobile");
 
+
     string className = "block-interior-hero";
-    string style = $"--mobileImage: url({imageMobile.MediaUrl()}); --desktopImage:  url({imageDesktop.MediaUrl()});";
+    string style = $"--mobileImage: url({imageMobile.GetCropUrl(width: 768, furtherOptions: "&format=WebP")}); --desktopImage:  url({imageMobile.GetCropUrl(width: 1920, furtherOptions: "&format=WebP")});";
     string props = "";
 
     //check if has content in area
