--- a/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/latestNews.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/latestNews.cshtml
@@ -75,7 +75,7 @@
 
                     <div class="col-md-4">
                         <a href="@child.Url()" class="news-card d-flex flex-row align-items-center p-2 text-decoration-none">
-                            <img src="@image.MediaUrl()" class="object-fit-cover" width="120" height="80" alt="@child.GetProperty("title").GetValue()" />
+                            <img src="@image.GetCropUrl(width: 120, height: 80, furtherOptions:"&format=WebP")" srcset="@image.GetCropUrl(width: 240, height: 160, furtherOptions:"&format=WebP") 2x" class="object-fit-cover" width="120" height="80" alt="@child.GetProperty("title").GetValue()" />
                             <div class="w-100 h-100 d-flex flex-column ps-2 py-2">
                                 <h3 class="h6 news-card__headline">@child.GetProperty("title").GetValue()</h3>
                                 <p class="mt-auto fw-light fs-xs" style="color: var(--bs-gray-30)">@String.Format("{0:MMMM d, yyyy}", pubDate)</p>
