--- a/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/supportSection.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/supportSection.cshtml
@@ -34,7 +34,7 @@
         var typedMediaPickerSingle = content.Value<Umbraco.Cms.Core.Models.MediaWithCrops>("backgroundImage");
         if (typedMediaPickerSingle != null)
         {
-            <img src="@typedMediaPickerSingle.MediaUrl()" class="block-home-support-section__img mb-5" loading="lazy" />
+            <img src="@typedMediaPickerSingle.GetCropUrl(width: 1280, furtherOptions:"&format=WebP")" srcset="@typedMediaPickerSingle.GetCropUrl(width: 2560, furtherOptions:"&format=WebP") 2x" class="block-home-support-section__img mb-5" loading="lazy" />
         }
         else
         {
