--- a/src/WRA.Umbraco.Web/Views/MagazineLanding.cshtml
+++ b/src/WRA.Umbraco.Web/Views/MagazineLanding.cshtml
@@ -191,17 +191,19 @@
                 @foreach (var item in magazineCollections.FirstOrDefault().Children)
                 {
                     var image = item.Value<Umbraco.Cms.Core.Models.MediaWithCrops>("image");
-
-                    <div class="col-6 col-md-4 col-lg-3">
-                        <a href="@item.Url()" class="text-decoration-none d-block link-hover-inverse">
-                            <img src="@image.GetCropUrl(width: 468, furtherOptions: "&format=WebP")" class="w-100 h-auto mb-3" style="max-width:234px;" width="@image.Value("umbracoWidth")" height="@image.Value("umbracoHeight")" alt="@(image.Value("altText") ?? "")" />
-                            <h3 class="h4 mb-2">@item.Name</h3>
-                            @if (item.HasValue("excerpt"))
-                            {
-                                <p class="fs-sm" style="color: var(--bs-gray-30)">@item.Value("excerpt")</p>
-                            }
-                        </a>
+                    if (item.Url() != null)
+                    {
+                        <div class="col-6 col-md-4 col-lg-3">
+                            <a href="@item.Url()" class="text-decoration-none d-block link-hover-inverse">
+                                <img src="@image.GetCropUrl(width: 468, furtherOptions: "&format=WebP")" class="w-100 h-auto mb-3" style="max-width:234px;" width="@image.Value("umbracoWidth")" height="@image.Value("umbracoHeight")" alt="@(image.Value("altText") ?? "")" />
+                                <h3 class="h4 mb-2">@item.Name</h3>
+                                @if (item.HasValue("excerpt"))
+                                {
+                                    <p class="fs-sm" style="color: var(--bs-gray-30)">@item.Value("excerpt")</p>
+                                }
+                            </a>
                     </div>
+                    }
                 }
             }
         </div>
